# graphmind-ai-lab

./: .env.example  .gitignore  AGENTS.md  README.md  agent.py  agent_workflow.mmd  cart.py  chatbot.py  config.py  create_kg_pastel.py  customer_profile.py  cypher.py  diagnostics.py  graph.py  lmstudio_chatbot.py  prompts.py  requirements.txt  session_manager.py  utils.py  utils_common.py  visualize_agent_graph.py
.claude/: settings.json
.github/workflows/: falkor-chat.yml
.streamlit/: secrets.toml.example
claude/: AGENTS.md  CLAUDE.md  README.md
claude/analyst/: analyst.md
claude/analyst/hooks/: guard-review-doc-writes.sh
claude/analyst/kaizen/: history.md  inbox.md  plan.md
claude/architect/: architect.md
claude/architect/hooks/: guard-plan-doc-writes.sh
claude/architect/kaizen/: history.md  inbox.md  plan.md
claude/cobb/: TESTING.md  cobb.md
claude/cobb/kaizen/: history.md  inbox.md  plan.md
claude/coder/: coder.md
claude/coder/kaizen/: history.md  inbox.md  plan.md
claude/data-scientist/: data-scientist.md
claude/data-scientist/hooks/: guard-ds-doc-writes.sh
claude/data-scientist/kaizen/: history.md  inbox.md  plan.md
claude/devops/: devops.md
claude/devops/hooks/: guard-destructive-ops.sh
claude/dra-claudia/: dra-claudia.md
claude/frontend-engineer/: frontend-engineer.md
claude/graph-dba/: falkordb-quirks.md  falkordb-reference.md  graph-dba.md
claude/joern/: joern.md
claude/qa-engineer/: qa-engineer.md
claude/saul/: saul.md
claude/scripts/: audit-team.sh  guard-destructive-ops.sh  guard-doc-writes.sh
claude/tdd-engineer/: tdd-engineer.md
claude/teco/: teco.md
claude/tico/: tico.md
cpg/: .gitignore
docs/: BACKLOG.md  HISTORY.md
docs/plans/: m2-cpg-analysis-coordination.md  m2-cpg-analysis-skill.md
docs/requirements/: cpg-query-access.md  joern-cpg-pipeline.md
docs/reviews/: m2-cpg-analysis-skill.md  m2-cpg-analysis.md
falkor-chat/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  start_falkordb.sh
falkor-chat/docs/: BACKLOG.md  DESIGN.md  HISTORY.md  QUERIES.md
falkor-chat/kaizen/: history.md  plan.md
falkor-chat/scripts/: backfill_thread_ids.sh  bootstrap_schema.sh  load_append.py  load_test.sh  seed_demo.sh  seed_workflows.sh  start_falkordb.sh  start_server.sh  test_queries.sh
falkor-chat/server/: .env.example  pyproject.toml
falkor-chat/server/falkorchat/: __init__.py  api.py  app.py  config.py  db.py  embedding.py  executor.py  guards.py  llm.py  mcp.py  proof_defs.py  repository.py  responder.py  schemas.py  services.py  tools.py  trigger.py
falkor-chat/server/tests/: conftest.py  test_api.py  test_app.py  test_db.py  test_embedding.py  test_executor.py  test_executor_agent.py  test_executor_process.py  test_executor_produced.py  test_graphrag.py  test_guards.py  test_llm.py  test_mcp.py  test_mcp_client.py  test_process_flow.py  test_process_input.py  test_provenance.py  test_repository.py  test_responder.py  test_services.py  test_services_live.py  test_tools.py  test_trigger.py  test_workflow_live.py
falkor-chat/server/tests/eval/: golden_guards.jsonl
falkor-chat/web/: app.js  index.html
kiro/: DESIGN.md
opencode/: local-llm.md
opencode/agents/: coding-senior.md  rpg.md
salesperson/: .gitignore  README.md  config.py  create_kg_pastel.py  llm.py  requirements.txt  start_falkordb.sh  test_models.py
salesperson/.streamlit/: secrets.toml.example
skills/: README.md
skills/agent-maintenance/: SKILL.md
skills/agent-standards/: claude-code.md  kiro.md  opencode.md
skills/cpg-analysis/: SKILL.md
skills/joern-cpg/: SKILL.md
skills/user-preferences/: SKILL.md
(+145 files in other folders)
