[project]
name = "falkorchat"
version = "0.1.0"
description = "falkor-chat M1 server — REST + MCP chat over FalkorDB"
requires-python = ">=3.12"
# Bounds track the live-verified versions (see AGENTS.md "Live-verified facts"):
# - mcp is pinned to one minor: app.py relies on `mcp_app.router.lifespan_context`
#   and the Streamable-HTTP session-manager lifespan (python-sdk #1367) — both
#   implementation details that a minor bump may change. Verified on 1.28.x.
# - falkordb-py 1.6.x is the line the repository layer was verified against.
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn[standard]>=0.49,<0.50",
    "falkordb>=1.6,<1.7",
    "mcp>=1.28,<1.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "httpx>=0.28,<0.29",
    "ruff>=0.14,<0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-m "not live"` DESELECTS the live-marked tests by default so the standard
# `pytest` run stays network-free and fast even when LM Studio happens to be up
# (a reachability-skip alone would not — it would run them). Opt in explicitly
# with `pytest -m live`: a command-line `-m` overrides this one.
addopts = '-ra -m "not live"'
markers = [
    "live: end-to-end test against a REAL LM Studio (+ FalkorDB); deselected by default, run with `pytest -m live` (see AGENTS.md)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Deliberately small: pyflakes + pycodestyle + import order. No behavioral
# rewrites — app-code style modernisation belongs to the code owners.
select = ["E", "F", "W", "I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["falkorchat*"]
